# mpf-vpx-plugin

./: .gitignore  CMakeLists.txt  README.md  plugin.cfg
.github/workflows/: build.yml  release.yml
docs/superpowers/notes/: 2026-04-13-master-abi-port-notes.md
docs/superpowers/plans/: 2026-04-12-mpf-vpx-plugin.md  2026-04-13-changed-return-types.md
docs/superpowers/specs/: 2026-04-12-mpf-vpx-plugin-design.md  2026-04-13-changed-return-types-design.md
scripts/: mpf_controller.vbs
src/: BCPClient.cpp  BCPClient.h  ChangedItems.cpp  ChangedItems.h  Log.cpp  Log.h  MPFController.cpp  MPFController.h  MPFPlugin.cpp  Recorder.cpp  Recorder.h
tests/: MockBCPServer.h  test_BCPClient.cpp  test_ChangedItems.cpp  test_MPFController.cpp  test_Recorder.cpp  test_main.cpp
